<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="381dp"
        android:layout_height="423dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/photo" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:hint="@string/word"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLines="1"
        />


    <Button
        android:id="@+id/camera"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/camera"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save"
        style="?android:textAppearanceMedium"
        android:background="@color/white"
        android:textColor="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textStyle="bold"
        android:text="@string/save"
         />


</LinearLayout>